# opti-pipe

./: .gitignore  LICENZE  README.md  pyproject.toml
data/: config.yaml
jupyter/: prof.ipynb  proof.ipynb
src/opti_pipe/: __init__.py  heat_distribution.py  main.py  models.py  router.py
src/opti_pipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/opti_pipe/opti_pipe.egg-info/: SOURCES.txt
src/opti_pipe/utils/: __init__.py  load_config.py  load_config.pyi
